/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.4/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation 'junit:junit:4.13.2'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:32.1.1-jre'
    implementation "org.openjfx:javafx-controls:21"

    // JSON Library
    implementation 'org.json:json:20240303'

    // Genson for JSON files
    implementation 'com.owlike:genson:1.6'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.web' ]
}

application {
    // Define the main class for the application.
    mainClass = 'ce316project.App'
}

// Make sure resources are included in the build
processResources {
    // If resources don't exist yet, print a warning but don't fail the build
    doFirst {
        def resourcesDir = file("$projectDir/src/main/resources")
        if (!resourcesDir.exists()) {
            logger.warn("Resources directory does not exist: $resourcesDir")
            resourcesDir.mkdirs()
        }
    }
}

// This task verifies our user guide HTML is properly setup
task verifyUserGuide {
    doLast {
        def userGuideFile = file("$projectDir/src/main/resources/UserGuide.html")
        if (!userGuideFile.exists()) {
            logger.warn("User Guide file not found: $userGuideFile")
            logger.warn("The application will fall back to basic view.")
        } else {
            logger.lifecycle("User Guide file found: $userGuideFile")
        }
    }
}

// Run the verification before the build
classes.dependsOn verifyUserGuide
